2002-09-02  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-node.c
	(bonobo_ui_node_ref): fix bad bogon.

	* bonobo/bonobo-window.c
	(bonobo_window_realize): kill; we don't
	need to flush the cache, on settings
	changed, we use stock icons properly now.
	(setting_changed_cb): bin.

	* bonobo/bonobo-ui-util.c
	(bonobo_ui_util_xml_set_image): bin the
	widget direction in the cache.
	(bonobo_ui_image_cache_trash): bin.
	(bonobo_ui_util_xml_set_image): upd.

2002-08-31  Jacob Berkman  <jacob@ximian.com>

	* tests/Makefile.am (LDADD): add -lpopt

2002-08-30  Michael Meeks  <michael@ximian.com>

	* Version 2.0.3

2002-08-30  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-util.c
	(bonobo_ui_image_set_pixbuf): fix
	pixbuf leak on theme change.
	(bonobo_ui_util_xml_get_pixbuf): kill.
	(bonobo_ui_image_set_stock): impl. for speed.
	(bonobo_ui_util_xml_set_image): impl from
	its' guts, handle stock icons more
	efficiently, and far more sanely.

	* bonobo/bonobo-ui-sync-toolbar.c
	(impl_bonobo_ui_sync_toolbar_state): upd.
	(cmd_get_toolbar_image): kill.

	* bonobo/bonobo-ui-sync-menu.c
	(impl_bonobo_ui_sync_menu_state): upd.
	(cmd_get_menu_pixbuf): kill.

2002-08-28  Michael Meeks  <michael@ximian.com>

	* Version 2.0.2

2002-08-23  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-toolbar.c
	(impl_bonobo_ui_sync_toolbar_remove_root): fix leak.

	* bonobo/bonobo-ui-util.c
	(bonobo_ui_util_build_help_menu): don't leak id.

	* bonobo/bonobo-ui-engine.c (do_sync): add ref/unref
	pair on node around here #90600

	* bonobo/bonobo-ui-xml.c (node_free): unref don't free.
	(bonobo_ui_xml_finalize): ditto.
	(free_nodedata_tree): set data to NULL after info free.

	* bonobo/bonobo-ui-node.c (node_free_internal):
	move tree unlinkage into here, unlink if we have
	->prev node too.
	(bonobo_ui_node_unref, bonobo_ui_node_ref): impl.
	(bonobo_ui_node_free): implement in terms of unref.
	(bonobo_ui_node_new, bonobo_ui_node_copy): assign to 1.
