@@ -1,3 +1,9 @@
+2002-09-03  Michael Meeks  <michael@ximian.com>
+
+	* bonobo/bonobo-ui-engine.c
+	(bonobo_ui_engine_stamp_root): don't leak
+	references as we re-stamp the root.
+
 2002-09-02  Michael Meeks  <michael@ximian.com>
 
 	* bonobo/bonobo-ui-node.c
